--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,16 @@
 @import "base/reset";
 @import "base/typography";
  
+@import "components/buttons";
+
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
+
+@import "pages/home";
+
+@import "utils/functions";
+@import "utils/helpers";
+@import "utils/mixins";
+@import "utils/placeholders";
+@import "utils/variables";
