--- a/sass/base/reset.scss
+++ b/sass/base/reset.scss
@@ -19,8 +19,10 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
+	/*
 	font-size: 100%;
-	font: inherit;
+	font: inherit; 
+	*/
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -28,9 +30,11 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+/*
 body {
 	line-height: 1;
 }
+*/
 ol, ul {
 	list-style: none;
 }
